; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_grep_source_clear.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_grep_source_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_source = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grep_source_clear(%struct.grep_source* %0) #0 {
  %2 = alloca %struct.grep_source*, align 8
  store %struct.grep_source* %0, %struct.grep_source** %2, align 8
  %3 = load %struct.grep_source*, %struct.grep_source** %2, align 8
  %4 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @FREE_AND_NULL(i32 %5)
  %7 = load %struct.grep_source*, %struct.grep_source** %2, align 8
  %8 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @FREE_AND_NULL(i32 %9)
  %11 = load %struct.grep_source*, %struct.grep_source** %2, align 8
  %12 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @FREE_AND_NULL(i32 %13)
  %15 = load %struct.grep_source*, %struct.grep_source** %2, align 8
  %16 = call i32 @grep_source_clear_data(%struct.grep_source* %15)
  ret void
}

declare dso_local i32 @FREE_AND_NULL(i32) #1

declare dso_local i32 @grep_source_clear_data(%struct.grep_source*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
